--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "deploy": "gh-pages -d bit_website"
+    "deploy": "gh-pages -d UI"
   },
   "keywords": [],
   "author": "",
